========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-03-26

  - Fixed #245: Synchronized the definition of a valid account regular
    expression between the lexer and the later enhanced version (in Python)
    which checks the configured prefixes. A valid subaccount name may start with
    either a capital letter or a number.


2018-03-23

  - Removed deprecated methods from beancount.core (position, inventory,
    interpolation).


2018-03-22

  - Fixed #249: Error messages involving postings should start counting at 1
    instead of 0. (I agree.)

  - Added aliases for COMMODITY_META() vs. CURRENCY_META() and CURRENCY() and
    COMMODITY(). These terms are used interchangeably. In the next version of
    the shell, only one of them will be available.

  - Removed the ability to explicitly set a different price currency than a cost
    currency. I'm stunned my test for this is gone, I must have removed this by
    accident? No idea. It should not be allowed.


2018-03-19

  - Fixed #218, added a SAFEDIV function to the shell language.

  - Fixed #239, HELP command should tolerate semicolons and whitespace.
    (Also, don't print shell commands in test (remove docstrings), we want the
    name of the tests to list, not the input.)


2018-03-13

  - Removed SIMPLE booking method and all traces of it, including the
    'booking_algorithm' option. Only the later (I hesitate to say "newer"
    because it's been around for years) FULL booking method is supported
    onwards.

  - Fixed #35: Implemented implicit group-by syntax. That is, if you omit the
    GROUP BY clause, it is automatically inferred to be the non-aggregate
    columns. This make writing the type of simple queries we do much more
    convenient and allows you to be a little sloppy.

  - Fixed bug with unit test util for docutil, which was stripping the first
    empty line of the docstring (and failing).

