@@ -4,6 +4,13 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-03-27
+
+  - Completed PR #59 which adds support for globbing patterns in includes.,
+    inserting a chdir() around glob.glob() to handle expansion of relative
+    filenames.
+
+
 2018-03-26
 
   - Fixed #245: Synchronized the definition of a valid account regular
